[gd_scene load_steps=3 format=3 uid="uid://brkw42a52uneo"]

[ext_resource type="Script" uid="uid://hdnteyciykq1" path="res://UI Stuff/title_screen.gd" id="1_v6p8y"]

[sub_resource type="LabelSettings" id="LabelSettings_ak2if"]
font_size = 46

[node name="Title Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6p8y")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 338.0
offset_bottom = 190.0
color = Color(0.6509491, 0.74118245, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -108.0
offset_right = 87.0
grow_horizontal = 2
grow_vertical = 0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings	"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 28.0
offset_right = 256.0
offset_bottom = 68.0
text = "ARCADE ADVENTURE"
label_settings = SubResource("LabelSettings_ak2if")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
